--- a/hello/build.xml
+++ b/hello/build.xml
@@ -4,22 +4,27 @@
     <property name="src" location="src"/>
     <property name="build" location="build"/>
     <property name="classes" location="${build}/classes"/>
+	<property name="releases" location="/var/www/html/releases"/>
     <!-- define all targets -->
     <target name="compile">
     <mkdir dir="${classes}"/>
-	 <javac srcdir="${src}" destdir="${classes}" includeAntRuntime="false"/>
+		<javac srcdir="${src}" destdir="${classes}" includeAntRuntime="false"/>
     </target>
     <target name="run" depends="compile">
-	<java classname="${ant.project.name}" classpath="${classes}"/>
-    </target>
-    <target name="clean">
-	     <delete dir="${build}"/>
+		<java classname="${ant.project.name}" classpath="${classes}"/>
     </target>
     <target name="package" depends="compile">
 	<jar destfile="${build}/${ant.project.name}.jar" basedir="${classes}">
-	     <manifest>
-		<attribute name="Main–Class" value="${ant.project.name}"/>
-	    </manifest>
+		<manifest>
+			<attribute name="Main–Class" value="${ant.project.name}"/>
+		</manifest>
 	</jar>
+    </target>
+	<target name="dist" depends="package">
+		<zip destfile="${releases}/${ant.project.name}.zip" basedir="${build}"/>
+		
+	</target>
+    <target name="clean">
+	     <delete dir="${build}"/>
     </target>
  </project>
